# IrobotApp

./: .env.example  .gitignore  DEPLOYMENT_DEV.md  DEPLOYMENT_PROD.md  Makefile  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: ac0758074aad_initial_schema.py  add_per_task_model_configs.py
backend/app/: config.py  dependencies.py  main.py
backend/app/models/: database.py  schemas.py
backend/app/routers/: admin_config.py  audit_logs.py  auth.py  categories.py  chat.py  dashboard.py  documents.py  upload.py  users.py
backend/app/services/: audit_service.py  auth_service.py  chunking_service.py  config_service.py  converter_service.py  embedding_service.py  metrics_service.py  minio_service.py  ocr_service.py  pricing.py  rag_service.py  text_service.py  url_service.py
backend/app/services/agents/: _streaming.py  greeting_agent.py  orchestrator_agent.py  prompts.py  query_agent.py  vision_agent.py
backend/app/workers/: celery_app.py  tasks.py
frontend/: nginx.conf  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/categories/: page.tsx
frontend/src/hooks/: use-audit-logs.ts  use-categories.ts  use-chat.ts  use-config.ts  use-dashboard.ts  use-documents.ts  use-role.ts
frontend/src/lib/: api-client.ts  api.ts  constants.ts  sse.ts  types.ts  utils.ts
frontend/src/providers/: auth-provider.tsx  role-provider.tsx
nginx/: nginx.conf
scripts/: init_db.py  init_minio.py
(+48 files in other folders)
